--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,5 +7,7 @@
 </head>
 <body>
   session 값 확인 :   <q th:text="${session.loginEmail}"></q>
+  <a href="/member/update">나의정보수정</a>
+  <a href="/member/logout"></a>
 </body>
 </html>
