--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <p>안녕하세요 여기는 스프링부트입니다</p>
     <a href="/member/save">회원가입</a>
     <a href="/member/login">로그인</a>
+    <a href="/member/list">회원목록</a>
 
 
 </body>
